--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node pm2.js",
+    "monitor": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +19,23 @@
   },
   "homepage": "https://github.com/nemanjan00/reverse-shell-listener#readme",
   "devDependencies": {
-    "angular-terminal": "^1.0.0"
+    "angular": "^1.6.1",
+    "angular-terminal": "git+https://github.com/nemanjan00/angular-terminal.git",
+    "angular-websocket": "^2.0.1",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "jquery.mousewheel": "^3.1.9",
+    "jquery.terminal": "^0.11.23",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-livereload-plugin": "^0.10.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "express-ws": "^2.0.0",
+    "pm2": "^2.2.3"
   }
 }
